[XForms] repeat doesn't update on value change. Bug 362308, r=surkov+olli